[metadata]
description_file = README.md

[flake8]
max_line_length = 100
max_complexity = 10
filename = *.py
format = default
exclude =/quickbooks/objects/__init__.py

[coverage:run]
branch = True
omit = src/db/env.py,src/db/versions/*  # define paths to omit

[coverage:report]
show_missing = True
skip_covered = True
